Fix navbar to wrap properly

--- a/css/custom.css
+++ b/css/custom.css
@@ -300,10 +300,15 @@ footer {
     color:#fff;
     border:0;
     border-radius:0;
+    width: 100%;
 }
 
 .navbar-brand {
     color: #fff;
+}
+
+.navbar-header {
+    float: left;
 }
 
 .navbar-brand:hover,
@@ -314,6 +319,7 @@ footer {
 
 .navbar-nav > li  {
   color: #fff;
+  float: left;
 }
 
 .navbar-nav > li > a {
